[package]
name = "xhummingbird_server"
version = "0.1.0"
authors = ["xmisao <mail@xmisao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix = "0.10.0"
actix-rt = "1.1"
sailfish = "0.3.1"
protobuf = { version = "2", features = ["with-bytes"] }
zmq = "0.9.2"
slack-hook = "0.8"
ctrlc = "3.1.8"
chrono = "0.4.6"
tokio = "0.2.25"
serde_derive = "1.0.124"
serde = "1.0.124"
actix-files = "0.5.0"

[build-dependencies]
protobuf-codegen-pure = "2"

[features]
vendored-zmq = ['zmq/vendored']
