[package]
name = "xhummingbird_server"
version = "0.1.0"
authors = ["xmisao <mail@xmisao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix = "0.10.0"
actix-rt = "1.1"
sailfish = "0.3.1"
protobuf = { version = "2", features = ["with-bytes"] }
zmq = "0.9.2"
ctrlc = { version = "3.1.8", features = ["termination"] }
chrono = "0.4.6"
tokio = "0.2.25"
serde_derive = "1.0.124"
serde = "1.0.124"
actix-files = "0.5.0"
form_urlencoded = "1.0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

[build-dependencies]
protobuf-codegen-pure = "2"

[features]
vendored-zmq = ['zmq/vendored']
